--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,9 @@
-Nama      : Andina Putri Cahyani
-Usia      : 21 tahun
-Alamat    : Ngawi, Jawa Timur
-No. Telp  : 08**********16
-Hobi      : Travelling, Membaca Buku, Main Roblox
+Nama Lengkap      : Andina Putri Cahyani
+Nama Panggilan    : Andina / Dina
+Usia              : 21 tahun
+Alamat            : Ngawi, Jawa Timur
+No. Telp          : 08**********16
+Hobi              : Travelling, Membaca Buku, Main Roblox
 
 
 Deskripsi
